app/gangway/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gangway
  namespace: #@ data.values.gangway.namespace
  labels: #@ data.values.gangway.matchLabels
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.gangway.matchLabels
  strategy:
  template:
    metadata:
      labels: #@ data.values.gangway.matchLabels
    spec:
      containers:
        - name: gangway
          image: gcr.io/heptio-images/gangway:v3.1.0
          imagePullPolicy: Always
          command: ["gangway", "-config", "/gangway/gangway.yaml"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: gangway
              mountPath: /gangway/
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: gangway
          configMap:
            name: gangway
